--- a/style.css
+++ b/style.css
@@ -25,16 +25,27 @@
 
 .left, .right {
     background-color: red;
-    width: 40%; height: 700px;
+    width: 55%; height: 500px;
+    border-radius: 5%;
+}
 
+.left {
+    margin-left: 40px;
+}
+
+.right {
+    margin-right: 40px;
 }
 
 #logo {
-    transition: .4s ease-in-out;
+    transition: .4s ease-in;
     width: 300px; height: 300px;
 }
 
+.date-time {
+    margin: 5px;
+}
 
-#logo:hover, #logo:focus {
-    transform: scale(1.1);
+.quotes {
+    margin: 5px;
 }
