--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@
     /* box-sizing: border-box; */
     overflow: hidden;
 }
-body {
-  background-image: url(".. /magic-window/brussel.png");
+ .main {
+  background-image: url("../magic-window/brussel.png");
   background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
 }
 
 .main {
     width: 100%; height: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     align-content: center;
@@ -27,7 +30,7 @@ body {
 
 
 .left, .right {
-    /* background-color: red; */
+    background-color: red ;
     width: 40%; height: 700px;
 
 }
